objects/Service__c.object
<CustomObject><fields>
        <fullName>Cost_Per_UOM__c</fullName>
        <label>Cost Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <description>External_Notes from Synchro</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Price_Per_UOM__c</fullName>
        <label>Price Per UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Service_Family__c</fullName>
        <label>Service Family</label>
        <picklist>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Synchro_Index__c</fullName>
        <externalId>true</externalId>
        <label>Synchro Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <picklist>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Service</label><nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Services</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>